--- a/pdf parser.ipynb
+++ b/pdf parser.ipynb
@@ -394,8 +394,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T05:44:09.269232Z",
-     "start_time": "2024-12-13T05:43:48.456320Z"
+     "end_time": "2024-12-29T16:27:51.629557Z",
+     "start_time": "2024-12-29T16:27:44.715874Z"
     }
    },
    "cell_type": "code",
@@ -497,7 +497,7 @@
     ")\n",
     "\n",
     "\n",
-    "result = chain.invoke(\"summarise it\")\n",
+    "result = chain.invoke(\"what is a monopoly?\")\n",
     "print(result)\n"
    ],
    "id": "4b5062f3c6acff2a",
@@ -506,11 +506,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The documents provide rules for the game Monopoly. Each player starts with $1,500 and the Bank holds all remaining money and properties. The Bank pays salaries, sells properties, and collects taxes, fines, and loans. Players move around the board based on the roll of the dice, and may buy properties, pay rent, or perform other actions based on the space they land on. Players can buy houses and hotels to increase rent collection. Properties can be sold to other players or mortgaged through the Bank. There are special spaces on the board such as \"Free Parking,\" \"Chance,\" and \"Community Chest\" that allow players to draw cards and perform additional actions. The objective of the game is to become the wealthiest player through buying, renting, and selling properties.\n"
+      "Based on the provided context, a Monopoly is a property trading game produced by Parker Brothers. The objective of the game is to become the wealthiest player through buying, renting, and selling properties. Each player starts with $1,500 and takes turns rolling dice to move around the game board, with the goal of landing on and purchasing properties. Players can then charge rent to other players who land on their properties, and can build houses and hotels to increase the rent they can charge. The game includes Chance and Community Chest cards, which can affect a player's turn, as well as Title Deed cards for each property. The game can be played using classic rules or with the addition of a Speed Die to move the game along faster.\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {},
